# JSON-parser

./: CMakeLists.txt  JSON parser class.cpp  JSON parser class.hpp  LICENSE  README.md  main.cpp  string parser in expression.cpp
examples of json files/: example 1.json  example 10.json  example 2.json  example 3.json  example 4.json  example 5.json  example 6.json  example 7.json  example 8.json  example 9.json  tests description
